# hypercom

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  task_target.md
plans/: design.md  fixes.md  roadmap.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  export.rs  log.rs  mod.rs  parser.rs  serial.rs
src-tauri/src/models/: command.rs  mod.rs  serial.rs  settings.rs
src-tauri/src/parser/: mod.rs  parser.rs  protocol.rs
src-tauri/src/serial/: manager.rs  mod.rs  throttler.rs
src-tauri/src/storage/: database.rs  logfile.rs  mod.rs
src/components/commands/: CommandEditor.tsx  CommandItem.tsx  CommandList.tsx  CommandSidebar.tsx  index.ts
src/components/layout/: Header.tsx
src/components/parser/: ParserPanel.tsx  ProtocolEditor.tsx  index.ts
src/components/serial/: DataDisplay.tsx  SendInput.tsx  SerialConfig.tsx  index.ts
src/components/settings/: DisplaySettings.tsx  FontSettings.tsx  LogSettings.tsx  SettingsModal.tsx  ThemeSettings.tsx  index.ts
src/locales/: en-US.json  index.ts  zh-CN.json
src/stores/: commandStore.ts  index.ts  serialStore.ts  settingsStore.ts
src/types/: command.ts  index.ts  parser.ts  serial.ts  settings.ts
src/utils/: format.ts
