[package]
name = "hypercom"
version = "0.1.0"
description = "A modern serial port debugging tool"
authors = ["you"]
edition = "2021"

[lib]
name = "hypercom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
